--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <body>
         <header class="header">
             <p class="logo">Yuri Rocha</p>
+            <div class="cv">
+                <button class="navButton cvButton"><a href="https://doc-00-70-docs.googleusercontent.com/docs/securesc/a7hd8jpf4kcmgps34ggetv008alpim4n/mdvr7ipan3b8202qg9q3qsqavevn5pmo/1671622575000/16469268606322684228/16469268606322684228/10hBuF2GaZ7AZBYOwopdBuleJIrIhRGNG?e=download&ax=ALjR8szQuqiXgcpZ8jY340VqK3KsbpSGPICjygPn-ABnu5Bqc2EFpyzR9dzuumfFH3SH1mise1qyUyY5CrldqMvCuFfoLUTPP4sZ7HU4G6A0c2FBtJzR-NxqOPmp_E3Mb8-X7q83_MNoDSl7UR8hIWA5ayITyoXcpg6sDk4H1KvmFQH9MjZrs4hVr0sFi4CZ6sAxPwAjSlrMCIiduijPxXmjYKVhd62cnfIvjf98SiWn07uq1-Y3V6bzqzyxY3fSfvty78-jzACF6S839KgGrOIyry_6wRh3GO4E5ciXKNUqidFyjFZD7HrP2GRLT24a63abg2fH_ZgJLGlLX4vmzXmGwGPQvrOLbmS3OpYsOtrxdGNl8z_sRMJD7SdIg-VOorPcmnipCfyjkpCtkQfwQEUYeqBMfEC2xec00NjUBjeMbBkGNDAN1OXGsSzwyu6HVU7ENKt-tBH4Y09Ocq-e8RLHvHiN1Doda6drMuAa8gn88FgiDKX2xLMSyPeBLwsuWFG2pRcs47T6XVy0ivf9RMO52BVogZtzEaHx25q8pQpOATTa5xVCHy6HENPvmNjNffuG5GYFo0Hh4NiJ4DKmseXDNRk0o_boKSgfPh_YBX_zQfrlYPjjicU-nLx2Imus70Ngj5YRU6McGEAX752UPYhgKsOojT0iTOvIugOW2lRGNrU_pMsY0M3hAXqb8lF13wBl7vqf1Gc8ZknLXWgxX-S47m00DefEfR7i5hU6SkDXJZ4_RFMuUPWmRNxYhI2BfzMn_gtHHChOy2RiLhjK7gvdCRO6I4-dNrVedm0G-7XDZiGO6k6g9ptK_UgAsntL_RjR34uu0Q0_tG-eT3227yvtK20BNl0lAGbZu5ahNh89VaG1uYMeBKLkFVJYceHPGCJxiT3WMUb5CBXwePrxQmEuyXjYSOzuN4jl9Ol8p_s&uuid=576768bd-570d-4afc-9857-333e9c99c78a&authuser=0" download="CV-Yuri">Baixar CV</a></button>
+            </div>
             <div class="navbar">
                 <button class="navButton"><a href="#start">Início</a></button>
                 <button class="navButton"><a href="#projects">Projetos</a></button>
