new project added
Added the first project at the gk position

--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
                 </div>
                 <div class="projectsContainer">
                     <div class="gk">
-                        <a href=""><img src="./images/production.svg" alt=""></a>
-                        <p class="projectName">Em produção.</p>
+                        <a target="_blank" href="https://rochayuri.github.io/linguagens-desenvolvimento/index.html"><img src="./images/linguagens-desenvolvimento.svg" alt="Linguagens de Desenvolvimento"></a>
+                        <p class="projectName">Linguagens de Desenvolvimento.</p>
                     </div>
                     <div class="lb">
                         <a href=""><img src="./images/production.svg" alt=""></a>
