--- a/teste-lingua/index.html
+++ b/teste-lingua/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="text">
-        <p id="text1">Teste</p>
+        <p id="text1">This is my portfolio! The place where I seek to show my skills and ideas in the projects I create! I am a person passionate about technology, sports (I think the form of the projects presented below will be possible to perceive.), family and games. I believe that technology has the necessary power to change people's lives through access to information. Go straight on! Enjoy the time that you visit me and, if you like it, contact me!</p>
+        <p id="text2">This is my portfolio! The place where I seek to show my skills and ideas in the projects I create! I am a person passionate about technology, sports (I think the form of the projects presented below will be possible to perceive.), family and games. I believe that technology has the necessary power to change people's lives through access to information. Go straight on! Enjoy the time that you visit me and, if you like it, contact me!</p>
     </div>
     <script src="js.js" type="text/javascript"></script>
 </body>
