--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     <input type="email" placeholder="E-mail" name="email" id="email" required><br>
                     <textarea name="message" placeholder="Sua mensagem.." id="formMessage" required></textarea><br>
                     <button type="submit" id="button">Enviar</button>
-                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/emailsent.html">
+                    <input type="hidden" name="_next" value="./emailsent.html">
                     <input type="hidden" name="_captcha" value="false">
                 </form>
             </div>
