--- a/index.html
+++ b/index.html
@@ -297,21 +297,20 @@
             </section>
         </div>
         <footer class="footer" id="contacts">
-            <div class="socialMedias">
-                <a target="_blank" href="https://linkedin.com/in/rocha-yuri/"><img src="./images/linkedin.svg" alt="linkedin"></a>
-                <a target="_blank" href="https://github.com/RochaYuri"><img src="./images/github.svg" alt="github" id="github"></a>
-                <a target="_blank" href="https://instagram.com/rochayurii/"><img src="./images/instagram.svg" alt="instagram"></a>
-                <a target="_blank" href="https://facebook.com/RochaYurii/"><img src="./images/facebook.svg" alt="facebook"></a>
+            <div class="socialMedias"> <!--redes sociais-->
+                <a target="_blank" href="https://linkedin.com/in/rocha-yuri/"><img src="./images/linkedin.svg" alt="linkedin"></a> <!--linkedin-->
+                <a target="_blank" href="https://github.com/RochaYuri"><img src="./images/github.svg" alt="github" id="github"></a> <!--github-->
+                <a target="_blank" href="https://instagram.com/rochayurii/"><img src="./images/instagram.svg" alt="instagram"></a> <!--instagram-->
+                <a target="_blank" href="https://facebook.com/RochaYurii/"><img src="./images/facebook.svg" alt="facebook"></a> <!--facebook-->
             </div>
             <div class="e-mail">
-                <form action="https://formsubmit.co/rochayuri.dev@gmail.com" method="POST">
+                <form action="https://formsubmit.co/rochayuri.dev1@gmail.com" method="POST"> <!--formulario de envio de e-mail-->
                     <h3 class="formTitle" id="formTitle">Me envie um e-mail!</h3>
                     <input type="text" placeholder="Nome" name="name" id="formName" required><br>
                     <input type="email" placeholder="E-mail" name="email" id="email" required><br>
                     <textarea name="message" placeholder="Sua mensagem.." id="formMessage" required></textarea><br>
                     <button type="submit" id="button">Enviar</button>
-                    <input type="hidden" name="_next" value="./emailsent.html">
-                    <input type="hidden" name="_captcha" value="false">
+                    <input type="hidden" name="_captcha" value="false"> <!--captcha desligado-->
                 </form>
             </div>
         </footer>
@@ -319,6 +318,6 @@
             <p id="copyright">Site desenvolvido por Yuri Rocha | Código aberto no GitHub!</p>
         </div>
         <script src="js/script.js"></script>
-        <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script> <!--ícones-->
     </body>
 </html>
