--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 <a target="_blank" href="https://facebook.com/RochaYurii/"><img src="./images/facebook.svg" alt="facebook"></a> <!--facebook-->
             </div>
             <div class="e-mail">
-                <form action="https://formsubmit.co/rochayuri.dev1@gmail.com" method="POST"> <!--formulario de envio de e-mail-->
+                <form action="https://formsubmit.co/rochayuri.dev@gmail.com" method="POST"> <!--formulario de envio de e-mail-->
                     <h3 class="formTitle" id="formTitle">Me envie um e-mail!</h3>
                     <input type="text" placeholder="Nome" name="name" id="formName" required><br>
                     <input type="email" placeholder="E-mail" name="email" id="email" required><br>
