Adding another project
Added the project of an jobs register website

--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
                         <p class="projectName">Linguagens de Desenvolvimento.</p>
                     </div>
                     <div class="lb"> <!--lateral esquerdo-->
-                        <a href=""><img src="./images/production.svg" alt=""></a>
-                        <p class="projectName">Em produção.</p>
+                        <a href="https://rochayuri.github.io/cadastro-empregos/index.html"><img src="./images/cadastro-empregos.svg" alt="Sistema de Cadastro de Empregos"></a>
+                        <p class="projectName">Sistema de Cadastro.</p>
                     </div>
                     <div class="cb1"> <!--zagueiro esquerdo-->
                         <a href=""><img src="./images/production.svg" alt=""></a>
