--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         <p class="projectName">Linguagens de Desenvolvimento.</p>
                     </div>
                     <div class="lb"> <!--lateral esquerdo-->
-                        <a href="https://rochayuri.github.io/cadastro-empregos/index.html"><img src="./images/cadastro-empregos.svg" alt="Sistema de Cadastro de Empregos"></a>
+                        <a target="_blank" href="https://rochayuri.github.io/cadastro-empregos/index.html"><img src="./images/cadastro-empregos.svg" alt="Sistema de Cadastro de Empregos"></a>
                         <p class="projectName">Sistema de Cadastro.</p>
                     </div>
                     <div class="cb1"> <!--zagueiro esquerdo-->
