--- a/index.html
+++ b/index.html
@@ -250,11 +250,11 @@
                 </div>
                 <div class="projectsContainer">
                     <div class="gk"> <!--goleiro-->
-                        <a target="_blank" href="https://rochayuri.github.io/linguagens-desenvolvimento/index.html"><img src="./images/linguagens-desenvolvimento.svg" alt="Linguagens de Desenvolvimento"></a>
+                        <a target="_blank" href="https://rochayuri.github.io/linguagens-desenvolvimento/"><img src="./images/linguagens-desenvolvimento.svg" alt="Linguagens de Desenvolvimento"></a>
                         <p class="projectName">Linguagens de Desenvolvimento.</p>
                     </div>
                     <div class="lb"> <!--lateral esquerdo-->
-                        <a target="_blank" href="https://rochayuri.github.io/cadastro-empregos/index.html"><img src="./images/cadastro-empregos.svg" alt="Sistema de Cadastro de Empregos"></a>
+                        <a target="_blank" href="https://rochayuri.github.io/cadastro-empregos/"><img src="./images/cadastro-empregos.svg" alt="Sistema de Cadastro de Empregos"></a>
                         <p class="projectName">Sistema de Cadastro.</p>
                     </div>
                     <div class="cb1"> <!--zagueiro esquerdo-->
