--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
                         <p class="projectName">Sistema de Cadastro.</p>
                     </div>
                     <div class="cb1"> <!--zagueiro esquerdo-->
-                        <a href=""><img src="./images/production.svg" alt=""></a>
-                        <p class="projectName">Em produção.</p>
+                        <a target="_blank" href="https://rochayuri.github.io/calculadora/"><img src="./images/calculator.svg" alt="Calculadora"></a>
+                        <p class="projectName">Calculadora.</p>
                     </div>
                     <div class="cb2"> <!--zagueiro direito-->
                         <a href=""><img src="./images/production.svg" alt=""></a>
