--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             </div>
         </footer>
         <div class="copyright">
-            <p id="copyright">Site desenvolvido por Yuri Rocha | Código aberto no GitHub!</p>
+            <p id="copyright">Site desenvolvido por <a target="_blank" href="https://github.com/RochaYuri">RochaYuri</a> || Código aberto no <a target="_blank" href="https://github.com/RochaYuri/rochayuri">GitHub</a>!</p>
         </div>
         <script src="js/script.js"></script>
         <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script> <!--ícones-->
