Added the tictactoe game

--- a/index.html
+++ b/index.html
@@ -299,8 +299,9 @@
                     <p class="projectName">Lista de Tarefas</p>
                 </div>
                 <div class="rb"> <!--lateral direito-->
-                    <a href=""><img src="./images/production.svg" alt=""></a>
-                    <p class="projectName">Em produção</p>
+                    <a target="_blank" href="https://rochayuri.github.io/jogo-da-velha/"><img
+                            src="./images/tictactoe.svg" alt="Jogo da Velha"></a>
+                    <p class="projectName">Jogo da Velha</p>
                 </div>
                 <div class="lm"> <!--ala esquerdo-->
                     <a href=""><img src="./images/production.svg" alt=""></a>
