Added the php abilitie

--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@
                             <div class="skillClassification">
                                 <!--caso menor de 480px a tela, não mostrará nada abaixo-->
                                 <h3 class="skillLevelTitle">CSS</h3>
-                                <p class="skillLevel">★★★☆☆</p>
+                                <p class="skillLevel">★★★★☆</p>
                                 <!--1 estela = noob; 2 estrelas = iniciante, 3 estrelas = intermediario, 4 estrelas = avançado, 5 estrelas = especialista-->
-                                <p class="abilitiesClassification">Intermediário</p>
+                                <p class="abilitiesClassification">Avançado</p>
                             </div> <!--caso menor de 1200px a tela, mostrará somente até aqui-->
                             <div class="abilitiesSkillContainer">
                                 <h3 class="abilitiesSkillTitle">Competências</h3>
                                 <ul class="abilitiesSkill1">
                                     <li class="abilitiesSkillContent">• Flexbox</li>
                                     <li class="abilitiesSkillContent">• Grid</li>
-                                    <li class="abilitiesSkillContent">• Sintaxe</li>
+                                    <li class="abilitiesSkillContent">• Variáveis</li>
                                 </ul>
                                 <ul class="abilitiesSkill2">
                                     <li class="abilitiesSkillContent">• Animação</li>
@@ -123,16 +123,15 @@
                             <div class="skillClassification">
                                 <!--caso menor de 480px a tela, não mostrará nada abaixo-->
                                 <h3 class="skillLevelTitle">JavaScript</h3>
-                                <p class="skillLevel">★★☆☆☆</p>
+                                <p class="skillLevel">★★★☆☆</p>
                                 <!--1 estela = noob; 2 estrelas = iniciante, 3 estrelas = intermediario, 4 estrelas = avançado, 5 estrelas = especialista-->
-                                <p class="abilitiesClassification">Iniciante</p>
+                                <p class="abilitiesClassification">Intermediário</p>
                             </div> <!--caso menor de 1200px a tela, mostrará somente até aqui-->
                             <div class="abilitiesSkillContainer">
                                 <h3 class="abilitiesSkillTitle">Competências</h3>
                                 <ul class="abilitiesSkill1">
                                     <li class="abilitiesSkillContent">• Lógica</li>
-                                    <li class="abilitiesSkillContent">• Fundamentos</li>
-                                    <li class="abilitiesSkillContent">• Sintaxe</li>
+                                    <li class="abilitiesSkillContent">• Eventos</li>
                                     <li class="abilitiesSkillContent">• Funções</li>
                                 </ul>
                                 <ul class="abilitiesSkill2">
@@ -169,6 +168,32 @@
                                     <li class="abilitiesSkillContent">• Laços e repetições</li>
                                     <li class="abilitiesSkillContent">• Manipulação de Strings</li>
                                     <li class="abilitiesSkillContent">• Tratamento de exceções</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="php">
+                        <img class="abilitiesImg" src="./images/php.svg" alt="PHP">
+                        <div class="abilitiesContentContainer">
+                            <div class="skillImage">
+                                <img src="./images/php.svg" alt="PHP">
+                            </div>
+                            <div class="skillClassification">
+                                <!--caso menor de 480px a tela, não mostrará nada abaixo-->
+                                <h3 class="skillLevelTitle">PHP</h3>
+                                <p class="skillLevel">★★☆☆☆</p>
+                                <!--1 estela = noob; 2 estrelas = iniciante, 3 estrelas = intermediario, 4 estrelas = avançado, 5 estrelas = especialista-->
+                                <p class="abilitiesClassification">Iniciante</p>
+                            </div> <!--caso menor de 1200px a tela, mostrará somente até aqui-->
+                            <div class="abilitiesSkillContainer">
+                                <h3 class="abilitiesSkillTitle">Competências</h3>
+                                <ul class="abilitiesSkill1">
+                                    <li class="abilitiesSkillContent">• Sintaxe</li>
+                                    <li class="abilitiesSkillContent">• Lógica</li>
+                                </ul>
+                                <ul class="abilitiesSkill2">
+                                    <li class="abilitiesSkillContent">• Estrutura de Dados</li>
+                                    <li class="abilitiesSkillContent">• Laços e Repetições</li>
                                 </ul>
                             </div>
                         </div>
